# Propensity-Score-Matching

./: README.md  propensity_test.ipynb  pyproject.toml  test_package.py
causalinference_azkaram.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ppt/: Viz.pptx  Viz.xlsx
propensio/: __init__.py  datasets.py  lcgeuclideanmethod.py  matching.py
propensio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
psm_lib/: __init__.py  lcgeuclideanmethod.py
