[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalinference_azkaram"
version = "1.0.1"
description = "Causal inference using Propensity Score Matching and Euclidean LCG method"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "azkarohbiya", email = "azkarohbiya@gmail.com" }
]
requires-python = ">=3.7"
dependencies = [
    "pandas>=1.1.5",
    "numpy>=1.18.5",
    "scipy>=1.2.0",
    "matplotlib>=3.1.0",
    "statsmodels>=0.8.0",
    "scikit-learn>=0.24.0",
    "plotly>=5.0.0",
]

[tool.setuptools]
packages = ["causalinference_azkaram"]

[tool.setuptools.package-dir]
"causalinference_azkaram" = "psm_lib"
