[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "propensio"
version = "1.0.4"
description = "Causal inference using Propensity Score Matching and Euclidean LCG method"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "azkarohbiya", email = "azkarohbiya@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "statsmodels>=0.13.0",
    "scikit-learn>=1.0.0",
    "plotly>=5.0.0",
]

[tool.setuptools]
packages = ["propensio"]

[tool.setuptools.package-data]
propensio = ["datasets/*.csv"]
